# engine-services

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  setup.ps1  setup.sh
src/: CMakeLists.txt
src/example/: CMakeLists.txt  C_Camera.h  C_Collidable.h  C_Follow.h  C_Health.h  C_PlayerController.h  C_Renderable.h  C_TileMap.h  C_TileMapRenderable.h  C_Transform.h  EmptyScene.h  ExampleScene.h  Tile.h  TileMapLoader.cpp  TileMapLoader.h  main.cpp
src/types/: Vertex.h
test/: CMakeLists.txt  SetupGTest.cmake  main.cpp
test/log/: LoggerTest.cpp
test/types/: ColorTest.cpp
test/util/: MathTest.cpp  TimerTest.cpp  TimerUtilTest.cpp
